# qarl

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: generators.ipynb  skippy.ipynb
src/: __init__.py
src/agent/: __init__.py  abstract_agent.py  agent.py
src/environment/: __init__.py  abstact_enviroment.py  generator_enviroment.py
src/game/: __init__.py  abstract_game.py  game.py
src/generator/: __init__.py  gaussian.py  gaussian_mixture.py  sin.py  sin_gaussian.py
src/open_ai_gym/: __init__.py  environment.py  example.py
src/oracle/: __init__.py  abstract_oracle.py  oracle.py
src/utils/: __init__.py  show_game_state.py
