[tool.poetry]
name = "qarl"
version = "0.1.0"
description = "Python library for Quantile Assessment using Reinforcement Learning (RL)."
authors = ["Maxim Demidovich <forsapt.mail@gmail.com>", "Valery Khamenya <khamenya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
jupyterlab = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
