[tool.poetry]
name = "qarl"
version = "0.1.0"
description = "Python library for Quantile Assessment using Reinforcement Learning (RL)."
authors = ["Maxim Demidovich <forsapt.mail@gmail.com>", "Valery Khamenya <khamenya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
gym = "^0.25.0"
torch = "^1.12.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.4.2"
matplotlib = "^3.5.2"
pre-commit = "^2.20.0"
commitizen = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
